# SSNP-IDT

./: README.md  const.py  data_io.py  fista.py  forward_model.py  main.py  main_old.py  simple_reconstruction.py  test.ipynb  test.py  tf_func.py  tv_fista_reconstruction.py
.github/workflows/: python-publish.yml
examples/: env_init.py  fista.py  forward_model.py  forward_model_batch.py  sample.tiff  simple_reconstruction.py  simple_reconstruction_batch.py  test.ipynb  tv_fista_reconstruction.py
ssnp_pkg/: CHANGELOG.txt  README.md  __init__.py  data.py  data.pyi  pyproject.toml  setup.cfg  tftool.py
ssnp_pkg/src/ssnp/: __init__.py  beam.py  beam.pyi  calc.py  calc.pyi  const.py  const.pyi  data.py  data.pyi  funcs.py  funcs.pyi  ops.py  ops.pyi  tftool.pyi  tftool_deprecated.py  utils.py  utils.pyi
ssnp_pkg/src/ssnp/utils/: __init__.py  array_pool.py  auto_gradient.py  data.py  data.pyi  fista.py  init_helper.py  multipliers.py  multipliers.pyi  utils.py  utils.pyi
ssnp_pkg/src/ssnp/utils/elementwise/: __init__.py  broadcast.py  broadcast.pyi  modified_pycuda_elementwise.py
tests/: test_beam.py  test_utils.py
