[metadata]
name = ssnp
version = attr: src.ssnp.VERSION
description = Split-step non-paraxial beam propagation simulation package
long_description = file: README.md, CHANGELOG.txt
long_description_content_type = text/markdown
keywords = simulation, optical engineering, beam propagation method
license_files = LICENSE.txt
author = Jiabei Zhu
author_email = zjb@bu.edu
url = https://github.com/bu-cisl/ssnp
classifiers = Programming Language :: Python :: 3
              License :: OSI Approved :: GNU General Public License v3 (GPLv3)
              Operating System :: OS Independent

[options]
install_requires = tifffile>=2020; imagecodecs>=2020; pycuda==2020.1; scipy>=1.5; scikit-cuda>=0.5.3
python_requires = >=3.8
packages = find:
package_dir =
    =src

[options.package_data]
* = *.pyi

[options.packages.find]
where = src