[metadata]
name = ssnp
version = attr: src.ssnp.VERSION
description = Split-step non-paraxial beam propagation simulation package
long_description = file: README.md, CHANGELOG.txt
long_description_content_type = text/markdown
keywords = simulation, optical engineering, beam propagation method
license_files = LICENSE.txt
author = Jiabei Zhu
author_email = zjb@bu.edu
url = https://github.com/bu-cisl/ssnp
classifiers = Programming Language :: Python :: 3
              License :: OSI Approved :: GNU General Public License v3 (GPLv3)
              Operating System :: OS Independent

[options]
install_requires =
    tifffile==2023.3.21
    imagecodecs==2024.6.1
    pycuda==2024.1.2
    scipy>=1.5
    scikit-cuda @ https://github.com/bu-cisl/scikit-cuda/releases/download/0.5.4/scikit_cuda-0.5.4-py2.py3-none-any.whl
    numpy>=1.22

python_requires = >=3.10
packages = find:
package_dir =
    =src

[options.package_data]
* = *.pyi

[options.packages.find]
where = src
